##Text encoding: utf-8

2010-02-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: add contextual menus for children.
	* libs/gcp/electron.cc: set a default Id.
	* libs/gcp/view.cc: ensure that deleted object ar removed from the
	selection list.
	* plugins/paint/atoms/chargetool.cc: fix position for unwanted
	orientations.

2010-02-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: add a localizable identity to objects.
	* libs/gcp/arrow.cc: ditto.
	* libs/gcp/arrow.h: ditto.
	* libs/gcp/docprop.cc: ditto.
	* libs/gcp/docprop.h: ditto.
	* libs/gcp/electron.cc: ditto.
	* libs/gcp/electron.h: ditto.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/fragment.h: ditto.
	* libs/gcp/mechanism-arrow.cc: ditto.
	* libs/gcp/mechanism-arrow.h: ditto.
	* libs/gcp/mechanism-step.cc: ditto.
	* libs/gcp/mechanism-step.h: ditto.
	* libs/gcp/mesomer.cc: ditto.
	* libs/gcp/mesomer.h: ditto.
	* libs/gcp/mesomery-arrow.cc: ditto.
	* libs/gcp/mesomery-arrow.h: ditto.
	* libs/gcp/mesomery.cc: ditto.
	* libs/gcp/mesomery.h: ditto.
	* libs/gcp/reactant.cc: fixed critical reaction stoichiometry issues.
	* libs/gcp/reactant.h: add a localizable identity to objects.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-operator.cc: ditto.
	* libs/gcp/reaction-operator.h: ditto.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.
	* libs/gcp/reaction-step.cc: ditto.
	* libs/gcp/reaction-step.h: ditto.
	* libs/gcp/reaction.cc: ditto.
	* libs/gcp/reaction.h: ditto.
	* libs/gcp/text.cc: ditto.
	* libs/gcp/text.h: ditto.
	* libs/gcu/atom.cc: ditto.
	* libs/gcu/atom.h: ditto.
	* libs/gcu/bond.cc: ditto.
	* libs/gcu/bond.h: ditto.
	* libs/gcu/chain.cc: ditto.
	* libs/gcu/chain.h: ditto.
	* libs/gcu/cycle.cc: ditto.
	* libs/gcu/cycle.h: ditto.
	* libs/gcu/document.cc: ditto.
	* libs/gcu/document.h: ditto.
	* libs/gcu/molecule.cc: ditto.
	* libs/gcu/molecule.h: ditto.
	* libs/gcu/object.cc: ditto.